contentEditable cursor displayed in wrong place when at end of text node, after newline
Categories
(Core :: DOM: Editor, defect)
Tracking
()
People
(Reporter: marijnh, Assigned: saschanaz)
References
Details
Attachments
(1 file, 1 obsolete file)
|
874 bytes,
text/html
|
Details |
Setting the selection (with JavaScript) in an element like <pre contenteditable=true>one\n<br></pre> (where the \n is a plain newline) at offset 4 in the one\n text node causes it to be displayed on the line with one. (Setting it at offset 1 in the <pre> node does produce the expected visual cursor position.)
Attached HTML file demonstrates the issue.
| Reporter | ||
Comment 1•5 years ago
|
||
(Somehow, attaching files directly on bug creation either doesn't work, or is confusing me. This should actually add the file.)
Kagami, can you take a look, please?
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 3•5 years ago
|
||
| Assignee | ||
Comment 6•5 years ago
|
||
Oh no, that fix is about bug 1691574. Let's leave this open.
Comment 7•5 years ago
|
||
Comment on attachment 9202026 [details]
Bug 1690502 - Do not ignore the newline followed by <br> in <pre> r=emilio
Revision D104523 was moved to bug 1691574. Setting attachment 9202026 [details] to obsolete.
| Assignee | ||
Updated•5 years ago
|
Comment 9•5 years ago
|
||
| bugherder | ||
| Assignee | ||
Comment 10•5 years ago
|
||
Fixed in:
Description
•