Bug 1690502 - Do not ignore the newline followed by <br> in <pre> r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D104523